--- a/final_app_group3/android/build.gradle
+++ b/final_app_group3/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath 'com.google.gms:google-services:4.3.10' // Asegúrate de añadir esta línea
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
