Separated screens and added firbase

--- a/final_app_group3_V2/android/build.gradle
+++ b/final_app_group3_V2/android/build.gradle
@@ -1,7 +1,16 @@
+plugins {
+    id "com.google.gms.google-services" version "4.4.0" apply false
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
+    }
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:deprecation"
+        }
     }
 }
 
