Añadidas fuentes y imágenes al proyecto

--- a/final_app_group3_V2/pubspec.yaml
+++ b/final_app_group3_V2/pubspec.yaml
@@ -61,9 +61,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/bombilla.jpg
+    - assets/images/caida.jpg
+    - assets/images/comedor.jpg
+    - assets/images/escaleras.jpg
+    - assets/images/fondo1.jpg
+    - assets/images/fondo2.jpg
+    - assets/images/fondo3.jpg
+    - assets/images/grifo.jpg
+    - assets/images/lavabo.jpg
+    - assets/images/luz.jpg
+    - assets/images/medicinas.jpg
+    - assets/images/peligro.jpg
+    - assets/images/rotor.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -76,17 +87,26 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+      - family: Aclonica
+        fonts:
+          - asset: assets/fonts/Aclonica-Regular.ttf
+      - family: Roboto
+        fonts:
+          - asset: assets/fonts/Roboto-Regular.ttf
+      - family: Inter
+        fonts:
+          - asset: assets/fonts/Inter-VariableFont_slnt,wght.ttf
+      - family: AlfaSlabOne
+        fonts:
+          - asset: assets/fonts/AlfaSlabOne-Regular.ttf
+      - family: AbrilFatface
+        fonts:
+          - asset: assets/fonts/AbrilFatface-Regular.ttf
+      - family: ABeeZee
+        fonts:
+          - asset: assets/fonts/ABeeZee-Regular.ttf
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
