--- a/final_app_group3_V2/pubspec.yaml
+++ b/final_app_group3_V2/pubspec.yaml
@@ -62,19 +62,19 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/bombilla.jpg
-    - assets/images/caida.jpg
-    - assets/images/comedor.jpg
-    - assets/images/escaleras.jpg
-    - assets/images/fondo1.jpg
-    - assets/images/fondo2.jpg
-    - assets/images/fondo3.jpg
-    - assets/images/grifo.jpg
-    - assets/images/lavabo.jpg
-    - assets/images/luz.jpg
-    - assets/images/medicinas.jpg
-    - assets/images/peligro.jpg
-    - assets/images/rotor.jpg
+    #- assets/images/bombilla.jpg
+    #- assets/images/caida.jpg
+    #- assets/images/comedor.jpg
+    #- assets/images/escaleras.jpg
+    #- assets/images/fondo1.jpg
+    #- assets/images/fondo2.jpg
+    #- assets/images/fondo3.jpg
+    #- assets/images/grifo.jpg
+    #- assets/images/lavabo.jpg
+    #- assets/images/luz.jpg
+    #- assets/images/medicinas.jpg
+    #- assets/images/peligro.jpg
+    #- assets/images/rotor.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -87,26 +87,25 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-      - family: Aclonica
-        fonts:
-          - asset: assets/fonts/Aclonica-Regular.ttf
-      - family: Roboto
-        fonts:
-          - asset: assets/fonts/Roboto-Regular.ttf
-      - family: Inter
-        fonts:
-          - asset: assets/fonts/Inter-VariableFont_slnt,wght.ttf
-      - family: AlfaSlabOne
-        fonts:
-          - asset: assets/fonts/AlfaSlabOne-Regular.ttf
-      - family: AbrilFatface
-        fonts:
-          - asset: assets/fonts/AbrilFatface-Regular.ttf
-      - family: ABeeZee
-        fonts:
-          - asset: assets/fonts/ABeeZee-Regular.ttf
-
+  #fonts:
+    # - family: Aclonica
+    #    fonts:
+    #     - asset: assets/fonts/Aclonica-Regular.ttf
+    # - family: Roboto
+    #   fonts:
+    #     - asset: assets/fonts/Roboto-Regular.ttf
+    # - family: Inter
+    #   fonts:
+    #     - asset: assets/fonts/Inter-VariableFont_slnt,wght.ttf
+    # - family: AlfaSlabOne
+    #   fonts:
+    #     - asset: assets/fonts/AlfaSlabOne-Regular.ttf
+    # - family: AbrilFatface
+    #   fonts:
+    #     - asset: assets/fonts/AbrilFatface-Regular.ttf
+    # - family: ABeeZee
+    #   fonts:
+  #     - asset: assets/fonts/ABeeZee-Regular.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
