--- a/final_app_group3_V2/pubspec.yaml
+++ b/final_app_group3_V2/pubspec.yaml
@@ -54,13 +54,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-  uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
     #- assets/images/bombilla.jpg
     #- assets/images/caida.jpg
@@ -74,7 +67,14 @@ flutter:
     #- assets/images/luz.jpg
     #- assets/images/medicinas.jpg
     #- assets/images/peligro.jpg
-    #- assets/images/rotor.jpg
+    #- images/rotor.jpg
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
+  uses-material-design: true
+
+  # To add assets to your application, add an assets section, like this:
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
